--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </div>
       <div class="card" style="width: 18rem;"><img class="card-img-top" src="./images/res5.jpg" alt="Card image cap">
         <div class="card-body">
-          <div class="card-title h5">Card Title</div>
+          <div class="card-title h5">Klarabergsgatan Terrace</div>
           
         </div>
 <button type="button" class="btn btn-primary">Book Appointment</button>
